--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,14 +1,18 @@
 footer
-  .container.text-left
-    ul.float-right.list-inline.text-right
-      li.list-inline-item
+  .container
+    ul.float-lg-raight.list-inline.text-center
+      li.d-xs-block.d-lg-inline-block
         a(href='https://github.com/kingsloi/community-airmonitor' target='_blank') I'm open source, create your own.
-      li.list-inline-item.pl-3
+      li.d-xs-block.d-lg-inline-block.pl-md-5
         a(href='https://github.com/kingsloi/community-airmonitor/issues' target='_blank') Issues
+      li.d-xs-block.d-lg-inline-block.pl-md-5
+        a.buy-coffee(href='https://www.buymeacoffee.com/kingsloi' target='_blank')
+          img.mr-1(src='/images/buy-coffee.svg')
+          | Buy me a coffee
 
   .container
     p.made-with-love
       | Made with
       i.fa.fa-heart.pulse
-      |  in
+      | in
       a(href='https://goo.gl/maps/Enx7PD4yEn6YhoF7A' target='_blank')  Gary
