feature: added bmac link, updated readme, added contributer

--- a/views/home.pug
+++ b/views/home.pug
@@ -257,6 +257,7 @@ block content
           li Kathy
           li Scott
           li Beth
+          li Megan
 
       .col-md-6
         h2.h4.text-uppercase.font-weight-light News / Links / Sources
