--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,11 +1,11 @@
-footer
+footer.pt-0.pt-md-5
   .container
     ul.float-lg-raight.list-inline.text-center
-      li.d-xs-block.d-lg-inline-block
-        a(href='https://github.com/kingsloi/community-airmonitor' target='_blank') I'm open source, create your own.
-      li.d-xs-block.d-lg-inline-block.pl-md-5
+      li.d-xs-block.d-lg-inline-block.py-3.py-lg-0
+        a(href='https://github.com/kingsloi/community-airmonitor' target='_blank') I'm open source, create your own!
+      li.d-xs-block.d-lg-inline-block.pl-md-5.py-3.py-lg-0
         a(href='https://github.com/kingsloi/community-airmonitor/issues' target='_blank') Issues
-      li.d-xs-block.d-lg-inline-block.pl-md-5
+      li.d-xs-block.d-lg-inline-block.pl-md-5.py-3.py-lg-0
         a.buy-coffee(href='https://www.buymeacoffee.com/kingsloi' target='_blank')
           img.mr-1(src='/images/buy-coffee.svg')
           | Buy me a coffee
@@ -14,5 +14,4 @@ footer
     p.made-with-love
       | Made with
       i.fa.fa-heart.pulse
-      | IN
-      a(href='https://goo.gl/maps/Enx7PD4yEn6YhoF7A' target='_blank')  Gary
+      a(href='https://goo.gl/maps/Enx7PD4yEn6YhoF7A' target='_blank') IN Gary
