--- a/public/css/main.css
+++ b/public/css/main.css
@@ -352,7 +352,8 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1); }
 
 small,
-.small {
+.small,
+.sources .source__type {
   font-size: 80%;
   font-weight: 400; }
 
@@ -4731,7 +4732,7 @@ button.bg-dark:focus {
 .d-inline-block {
   display: inline-block !important; }
 
-.d-block {
+.d-block, .sources .source__type {
   display: block !important; }
 
 .d-table {
@@ -4772,7 +4773,7 @@ button.bg-dark:focus {
 @media (min-width: 768px) {
   .d-md-none {
     display: none !important; }
-  .d-md-inline {
+  .d-md-inline, .sources .source__type {
     display: inline !important; }
   .d-md-inline-block {
     display: inline-block !important; }
@@ -12940,14 +12941,8 @@ body {
   margin-bottom: 75px;
   font-size: 14px; }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 45px;
-  line-height: 45px; }
-  footer p, footer ul {
-    margin-bottom: 0; }
+footer p, footer ul {
+  margin-bottom: 0; }
 
 textarea {
   resize: vertical; }
@@ -13065,7 +13060,7 @@ textarea {
   padding: 0.25rem;
   display: block; }
 
-sub.d-block {
+sub.d-block, .sources sub.source__type {
   padding-bottom: 0.25rem;
   line-height: inherit; }
 
@@ -13119,11 +13114,12 @@ sub.d-block {
   font-weight: bold; }
 
 .made-with-love {
+  padding-bottom: 0.5rem;
   color: #666;
   font-size: 12px;
   display: block;
   position: absolute;
-  bottom: -175px;
+  bottom: 0px;
   position: absolute;
   width: 90%;
   left: 50%;
@@ -13132,28 +13128,41 @@ sub.d-block {
   text-align: center; }
   @media (min-width: 992px) {
     .made-with-love {
-      bottom: -75px; } }
+      bottom: -20px; } }
   .made-with-love a {
     color: #000000;
     text-decoration: none; }
   .made-with-love .fa {
     color: #E90606;
-    margin: 0 3px;
+    padding: 0 3px;
+    margin: 0 4px;
     font-size: 10px;
     animation: pound 0.35s infinite alternate;
     -webkit-animation: pound 0.35s infinite alternate; }
 
 @-webkit-keyframes pound {
   to {
-    transform: scale(1.1); } }
+    transform: scale(1.5); } }
 
 @keyframes pound {
   to {
-    transform: scale(1.1); } }
+    transform: scale(1.5); } }
+
+.sources .source__type {
+  padding-right: 4px;
+  text-transform: uppercase; }
+
+.sponsors {
+  list-style-type: none;
+  text-align: center; }
+  @media (min-width: 768px) {
+    .sponsors {
+      text-align: left;
+      list-style-type: circle; } }
 
 .aviation-edge:hover img {
   filter: grayscale(0%); }
 
 .aviation-edge img {
   filter: grayscale(100%);
-  max-width: 200px; }
+  max-width: 150px; }
