--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -23,12 +23,6 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 45px;
-    line-height: 45px;
-
     p, ul {
         margin-bottom: 0;
     }
@@ -344,11 +338,12 @@ sub {
 }
 
 .made-with-love {
+    padding-bottom: 0.5rem;
     color: #666;
     font-size: 12px;
     display: block;
     position: absolute;
-    bottom: -175px;
+    bottom: 0px;
     position: absolute;
     width: 90%;
     left: 50%;
@@ -357,7 +352,7 @@ sub {
     text-align: center;
 
     @media (min-width: 992px) {
-        bottom: -75px;
+        bottom: -20px;
     }
 
     a {
@@ -367,7 +362,8 @@ sub {
 
     .fa {
         color: #E90606;
-        margin: 0 3px;
+        padding: 0 3px;
+        margin: 0 4px;
         font-size: 10px;
         animation: pound 0.35s infinite alternate;
         -webkit-animation: pound 0.35s infinite alternate;
@@ -376,13 +372,38 @@ sub {
 
 @-webkit-keyframes pound {
     to {
-        transform: scale(1.1);
+        transform: scale(1.5);
     }
 }
 
 @keyframes pound {
     to {
-        transform: scale(1.1);
+        transform: scale(1.5);
+    }
+}
+
+.sources {
+    .source {
+        &__type {
+            padding-right: 4px;
+            text-transform: uppercase;
+
+            @extend .small;
+
+            @extend .d-block;
+
+            @extend .d-md-inline;
+        }
+    }
+}
+
+.sponsors {
+    list-style-type: none;
+    text-align: center;
+
+    @media (min-width: 768px) {
+        text-align: left;
+        list-style-type: circle;
     }
 }
 
@@ -395,6 +416,6 @@ sub {
 
     img {
         filter: grayscale(100%);
-        max-width: 200px;
+        max-width: 150px;
     }
 }
