--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -19,7 +19,7 @@ html {
 
 body {
     padding-top: 80px;
-    margin-bottom: 75px;
+    margin-bottom: 100px;
     font-size: 14px;
 }
 
@@ -348,8 +348,7 @@ sub {
     font-size: 12px;
     display: block;
     position: absolute;
-    bottom: 0px;
-    position: absolute;
+    bottom: 20px;
     width: 90%;
     left: 50%;
     right: auto;
@@ -357,7 +356,7 @@ sub {
     text-align: center;
 
     @media (min-width: 992px) {
-        bottom: -20px;
+        bottom: 10px;
     }
 
     a {
@@ -468,5 +467,14 @@ sub {
 }
 
 .text--smushed {
+    letter-spacing: -1px;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+}
+
+.site-heading {
     letter-spacing: -1px;
 }
