--- a/client/src/assets/scss/themes/default/_variables.scss
+++ b/client/src/assets/scss/themes/default/_variables.scss
@@ -9,8 +9,8 @@ $brand-info: #5bc0dd;
 
 // Typography
 // -------------------------
-$font-family-base: "Helvetica Neue", Arial, sans-serif;
-$headings-font-family: "Helvetica Neue", Arial, sans-serif;
+$font-family-base: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+$headings-font-family: "Karla", "Helvetica Neue", Arial, sans-serif;
 
 // Buttons
 // -------------------------
