--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -512,26 +512,21 @@ sub {
     letter-spacing: -1px;
 }
 
-#map {
-    width: 100%;
-    height: 600px;
-
-    &__mask{
+.map-container {
+    &.map-container--has-mask {
+        cursor: pointer;
+        &:after{
+            top: 0;
             position: absolute;
-            z-index: 100000;
-            height: 100%;
             width: 100%;
-
-            color: rgba(255,255,255,0);
-            padding-top: 50%;
-            text-align: center;
-            font-size: 1.5rem;
-            text-transform: uppercase;
-        &:hover{
-            text-decoration: none;
-            color: rgba(255,255,255,1);
-            background-color: rgba(0,0,0,0.5);
+            height: 100%;
+            background-color: transparent;
+            content: ""
         }
+    }
+    #map {
+        width: 100%;
+        height: 600px;
     }
 }
 
@@ -539,6 +534,7 @@ sub {
 .site-heading {
     letter-spacing: -1px;
 }
+
 #visuals {
     .site-sub-heading{
         width: 85%;
@@ -555,7 +551,6 @@ sub {
         }
     }
 }
-
 
 .timeline {
     text-align: left;
