--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -565,6 +565,21 @@ sub {
             line-height: 0.95;
         }
     }
+
+    .highlighted {
+        font-weight: bold;
+        background-image: linear-gradient(
+            transparent 0%,
+            transparent calc(50% - 9px),
+            rgba(77, 165, 244, 0.35) calc(50% - 9px),
+            rgba(77, 165, 244, 0.35) 100%
+        );
+        background-size: 100% 190%;
+        word-break: break-word;
+        padding: 2px 0px 1px;
+        transition: all 120ms ease-in-out 0s;
+        background-position: 0px 0px;
+    }
 }
 
 .timeline {
